ec2.tf
resource "aws_instance" "ec2_example" {
    ami = "ami-06ca3ca175f37dd66"
    instance_type = "t2.micro"

    tags = {
      Name = "pubvmnew"
    }
}
